--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,25 +2,25 @@
 layout: default
 ---
 <article class="post" itemscope itemtype="http://schema.org/BlogPosting">
-
   <header class="post-header">
     <h1 class="post-title" itemprop="name headline">{{ page.title | escape }}</h1>
     <p class="post-meta"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>{% if page.author %} • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}</p>
   </header>
-
   <div class="post-content" itemprop="articleBody">
     {{ content }}
   </div>
+  <footer>
 	<div class="pagination">  
 	  {% if page.previous.url %}  
-		<a class="prev" href="{{page.previous.url | relative_url }}">&laquo; {{page.previous.title}}</a>  
+		<a class="prev" href="{{page.previous.url | relative_url }}">&laquo; Previous - {{page.previous.title}}</a>  
 	  {% endif %}  
 	  {% if page.next.url %}  
-		<a class="next" href="{{page.next.url | relative_url }}">{{page.next.title}} &raquo;</a>  
+		<a class="next" href="{{page.next.url | relative_url }}">Next - {{page.next.title}} &raquo;</a>  
 	  {% endif %}  
 	</div>
-
+   <a name="comments"></a>
   {% if site.disqus.shortname %}
     {% include disqus_comments.html %}
   {% endif %}
+  </footer>
 </article>
